# rust-erl-ext

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: codec.rs  erlang_rust_port.erl  erlang_rust_port.rs  json_port.erl  json_port.rs  parser.rs
src/: erl_ext.rs
test/: term_gen.erl
tests/: codec_test.rs  term_gen.erl
